--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,8 @@ dmypy.json
 
 # VS Code
 .vscode
-tests/PadeSlave.fmu
-PadeSlave_log.txt
-PadeSlave_result.mat
+
+# Other
+*.fmu
+*log.txt
+*.mat
